<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/descriptionPageTitle"
        android:id="@+id/descriptionPageTitle"
        android:textColor="@color/colorText"
        android:textStyle="italic"
        android:layout_below="@+id/shoppingCartButton"
        android:layout_alignLeft="@+id/txtServiceFeatures"
        android:layout_alignStart="@+id/txtServiceFeatures"
        android:layout_marginTop="37dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_description"
        android:id="@+id/txtServiceFeatures"
        android:layout_below="@+id/descriptionPageTitle"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="56dp"
        android:layout_marginLeft="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/total_price_title"
        android:id="@+id/txtPriceTitle"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="140dp"
        android:layout_marginLeft="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/service_price"
        android:id="@+id/txtPriceValue"
        android:layout_alignTop="@+id/txtPriceTitle"
        android:layout_alignRight="@+id/txtServiceFeatures"
        android:layout_alignEnd="@+id/txtServiceFeatures"
        android:layout_marginRight="37dp"
        android:layout_marginEnd="37dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_to_cart"
        android:id="@+id/addToCartButton"
        android:layout_marginBottom="34dp"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/shoppingCartButton"
        android:layout_toStartOf="@+id/shoppingCartButton" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shoppingCartButton"
        android:src="@mipmap/shoppingcart"
        android:layout_marginTop="36dp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/txtPriceValue"
        android:layout_alignEnd="@+id/txtPriceValue"
        android:contentDescription="@string/shopping_cart" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_home"
        android:id="@+id/backToHome"
        android:layout_alignTop="@+id/addToCartButton"
        android:layout_alignLeft="@+id/txtPriceTitle"
        android:layout_alignStart="@+id/txtPriceTitle"
        android:layout_marginLeft="55dp"
        android:layout_marginStart="55dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/badgeValue"
        android:id="@+id/shoppingCartBadge"
        android:background="@drawable/badge"
        android:layout_alignTop="@+id/shoppingCartButton"
        android:layout_alignRight="@+id/shoppingCartButton"
        android:layout_alignEnd="@+id/shoppingCartButton"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="false"
        android:layout_alignParentRight="false"
        android:paddingLeft="6dp"
        android:textColor="@color/colorText" />

</RelativeLayout>