<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/descriptionPageTitle"
        android:id="@+id/descriptionPageTitle"
        android:textColor="@color/colorText"
        android:textStyle="italic"
        android:layout_above="@+id/txtServiceFeatures"
        android:layout_alignRight="@+id/addToCartButton"
        android:layout_alignEnd="@+id/addToCartButton"
        android:layout_marginBottom="70dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_description"
        android:id="@+id/txtServiceFeatures"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/total_price_title"
        android:id="@+id/txtPriceTitle"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/txtServiceFeatures"
        android:layout_marginBottom="140dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_price_value"
        android:id="@+id/txtPriceValue"
        android:layout_alignTop="@+id/txtPriceTitle"
        android:layout_toRightOf="@+id/descriptionPageTitle"
        android:layout_toEndOf="@+id/descriptionPageTitle" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_to_cart"
        android:id="@+id/addToCartButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shoppingCartButton"
        android:src="@mipmap/shoppingcart"
        android:layout_marginTop="36dp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/txtPriceValue"
        android:layout_alignEnd="@+id/txtPriceValue"
        android:contentDescription="@string/shopping_cart" />

</RelativeLayout>